--- a/webapp/pages/wrapper.gohtml
+++ b/webapp/pages/wrapper.gohtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>idPair Central - {{ .Title }}</title>
+    <title>Example API Service - {{ .Title }}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/foundation.css">
